UI changes for  signal panel alignment issue fixed

--- a/src/css/signal-panel.css
+++ b/src/css/signal-panel.css
@@ -6,7 +6,7 @@
     float: left;
     text-align: left;
     padding: 12px 18px;
-    margin: 15px;
+    margin: 15px 28px 15px 15px;
     margin-bottom: 0px;
     border-radius: 6px;
 
